Start of lecture 6

--- a/P2023.AIBCCSS.L06.CognitiveModelsInSoftwareDevelopment.DistributedCognition.tex
+++ b/P2023.AIBCCSS.L06.CognitiveModelsInSoftwareDevelopment.DistributedCognition.tex
@@ -293,12 +293,16 @@ Reference: Robert MacDougall, ``The Significance of the Human Hand in the Evolut
 \end{itemize} 
 
 \begin{center}
- \includegraphics[width=5cm]{P2023.AIBCCSS.ExtendedMindDistributedCognitionSystemicThinking/Hybrid_Assistive_Limb.jpg}
+ \includegraphics[width=4cm]{P2023.AIBCCSS.ExtendedMindDistributedCognitionSystemicThinking/Hybrid_Assistive_Limb.jpg}
  
  \end{center}
  
+ \begin{itemize}
+ \item ``The external features here are just as causally relevant as typical internal features of the brain'' Clark and Chalmers.
+ \end{itemize}
+ 
 \begin{center}
-    \tiny{Picture taken from \url{https://en.wikipedia.org/wiki/Powered_exoskeleton}.}
+    \tiny{Picture taken from \url{https://en.wikipedia.org/wiki/Powered_exoskeleton}. Statement from Andy Clark and David Chalmers, ``The extended mind,'' Analysis 58 (1): 7--19 , 1998.}
 \end{center}
 \end{frame}
 
@@ -308,15 +312,244 @@ Reference: Robert MacDougall, ``The Significance of the Human Hand in the Evolut
     \item The mind is also the center of our beliefs
     \item Typically we think at beliefs as something completely internal to our mind
     \item Is it really so?
-    \begin{itemize}
-    \item \textcolor{red}{Active Externalism}
+     \item Or think at how many interaction with an environment of tools and devices we would need to think if we would assume that:
+         \begin{itemize}
+    \item processes are only inside the body and 
+    \item everything is is something that is manipulated and ``used''
 \end{itemize} 
-     \item Think at exoskeleton, for instance 
 \end{itemize} 
 
-
+\begin{center}
+    \tiny{Source of the content: Andy Clark and David Chalmers, ``The extended mind,'' Analysis 58 (1): 7--19 , 1998}
+\end{center}
 
 \end{frame}
+
+\begin{frame}
+{\centerline{Cognition and consciousness}}
+\begin{itemize}
+    \item Cognition is not consciousness
+    \item Remember of the emotional long term memory or even at the procedural long term memory
+    \item And think at all the work, for instance of therapists of moving feelings at the consciousness level 
+    \item Discussing consciousness is beyond the purpose of this course
+\end{itemize} 
+
+\begin{center}
+ \includegraphics[width=10cm]{P2023.AIBCCSS.ExtendedMindDistributedCognitionSystemicThinking/Neural_Correlates_Of_Consciousness.jpg}
+ 
+ \end{center}
+
+\begin{center}
+ \tiny{Picture taken from \url{https://en.wikipedia.org/wiki/Consciousness} where it is credited to Christof Koch (\url{https://en.wikipedia.org/wiki/Christof_Koch}).}
+ \end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Location of our beliefs (1/3)}}
+\begin{itemize}
+    \item Let us consider these two cases (from the reference):
+    \begin{itemize}
+    \item Inga wants to go to the MoMA and remembers that it is on 11 West 53 Street, Manhattan, and she goes there
+        \begin{itemize}
+    \item She had a (previous) belief  \textcolor{red}{in her \textbf{mind}} about the location and she uses it to direct her actions
+    \end{itemize} 
+    \item Otto suffers from Alzheimer diseases, so he forgets what he learns and to overcome this he takes with him a tablet where marks down information
+    \item Also Otto wants to go to the MoMA, he looks it up in the tablet, finds that it is on 11 West 53 Street, Manhattan, and goes there
+            \begin{itemize}
+    \item He had a (previous) belief  about the location \textcolor{cyan}{in his the \textbf{tablet}} and he uses it to direct her actions
+    \end{itemize} 
+    \item What is the difference?
+\end{itemize} 
+\end{itemize} 
+
+\begin{center}
+    \tiny{Source of the content: Andy Clark and David Chalmers, ``The extended mind,'' Analysis 58 (1): 7--19 , 1998}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Location of our beliefs (2/3)}}
+\begin{itemize}
+    \item We could explain the reasoning process of Otto in terms of external tools, but it would be quite convoluted
+    \item For Otto the tablet plays the same role as the \textcolor{red}{\it mind} for Inga
+    \item For beliefs what matter is not where they are located but the role that they play
+    \item After all, in what the beliefs of Otto and of Inga differ?
+  \begin{itemize}
+    \item  Their only difference is in the physical location
+\end{itemize} 
+\item There could be additional counterclaims of the differences on beliefs:
+\item \textcolor{orange}{The tablet of Otto could not be always with him for instance when he takes a shower}
+  \begin{itemize}
+    \item \textcolor{blue}{Inga beliefs could also be our her if she is drunk or excited}
+\end{itemize} 
+\end{itemize} 
+
+\begin{center}
+    \tiny{Source of the content: Andy Clark and David Chalmers, ``The extended mind,'' Analysis 58 (1): 7--19 , 1998}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Location of our beliefs (3/3)}}
+\begin{itemize}
+\item  \textcolor{orange}{Otto could be slower in gathering the information}
+  \begin{itemize}
+    \item \textcolor{blue}{What if Inga had a memory disorder that requires her a slow process to recall her beliefs?}
+\end{itemize} 
+\item  \textcolor{orange}{The process of Otto requires perception while the one of Inga only introspection}
+  \begin{itemize}
+    \item \textcolor{blue}{Are we sure that when we look up information on a table we are really exercising perception? If we consider the tablet as part of the mind, the process is still introspective}
+\end{itemize} 
+\item There are no strong arguments against considering also the one of Otto as a belief, and thus that his minds extends to the tablet
+\end{itemize} 
+
+\begin{center}
+    \tiny{Source of the content: Andy Clark and David Chalmers, ``The extended mind,'' Analysis 58 (1): 7--19 , 1998}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Additional speculation on Otto}}
+\begin{itemize}
+\item The tablet is an integral part of the life of Otto
+\item Otto can access directly and without any problem the information there
+\item Otto accepts as true the information stored in the notebook automatically
+\item Otto has once validated such information, and since then such information is valid
+\begin{itemize}
+\item \textcolor{orange}{What if someone leaks inside the table and put there wrong information?}
+\item \textcolor{blue}{Well, if someone by some subliminal manipulation forces in the mind some wrong information?}
+\end{itemize} 
+\end{itemize} 
+
+
+\begin{center}
+    \tiny{Source of the content, also copied verbatim: Andy Clark and David Chalmers, ``The extended mind,'' Analysis 58 (1): 7--19 , 1998}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Can we extend this concept beyond?}}
+\begin{itemize}
+\item What about groups of people, where the knowledge is distributed?
+\item The key point is how much our belief is:
+\begin{itemize}
+\item trust
+\item reliance
+\item availability 
+\end{itemize} 
+\item indeed, the language pays a major role, but ...
+\end{itemize} 
+
+\begin{center}
+    \tiny{Source of the content, also copied verbatim: Andy Clark and David Chalmers, ``The extended mind,'' Analysis 58 (1): 7--19 , 1998}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{Communication means (1/3)}}
+
+\begin{itemize}
+\item Empirical studies with 38 IT professionals
+\item Analysis of the communication patterns
+\end{itemize} 
+
+\begin{center}
+\textbf{When the communication is considered positive}
+\end{center}
+
+\begin{center}
+\centering
+\begin{tabular}{|c|c|c|c|}
+\hline
+{\textbf{What is being used}} & {\textbf{by me}} & \textbf{by others} & \textbf{by any}\\
+\hline
+{Vocalics} & 16\% & 16\% & 26\% \\
+\hline
+{Kinesics} & 21\% & 8\% & 24\% \\
+\hline
+ {Chronemics} & 3\% & 5\% & 5\%\\
+\hline
+{Proxemics} & 0\% & 3\% & 3\%\\
+\hline
+{Oculesics} &  0\% & 0\% & 0\%\\
+\hline
+{Synchrony} & 3\% & 0\% & 3\%\\
+\hline
+\end{tabular}
+\end{center}
+
+\begin{center}
+    \tiny{Source: Paolo Ciancarini, Mirko Farina, Sergey Masyagin, Giancarlo Succi, Sofiia Yermolaieva, and Nadezhda Zagvozkina. ``Non verbal communication in software engineering - an empirical study.'' IEEE Access, 9:71942–71953, 2021}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{Communication means (2/3)}}
+
+\begin{center}
+\textbf{When the communication is considered negative}
+\end{center}
+
+\begin{center}
+\centering
+\begin{tabular}{|c|c|c|c|}
+\hline
+{\textbf{What is being used}} & {\textbf{by me}} & \textbf{by others} & \textbf{by any}\\
+\hline
+{Vocalics} & 5\% & 8\% & 11\% \\
+\hline
+{Kinesics} & 11\% & 5\% & 11\% \\
+\hline
+{Chronemics} & 8\% & 8\% & 16\%\\
+\hline
+{Proxemics} & 0\% & 3\% & 3\%\\
+\hline
+{Oculesics} &  0\% & 3\% & 3\%\\
+\hline
+ {Synchrony} & 5\% & 0\% & 5\%\\
+\hline
+\end{tabular}
+\end{center}
+
+\begin{center}
+    \tiny{Source: Paolo Ciancarini, Mirko Farina, Sergey Masyagin, Giancarlo Succi, Sofiia Yermolaieva, and Nadezhda Zagvozkina. ``Non verbal communication in software engineering - an empirical study.'' IEEE Access, 9:71942–71953, 2021}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{Communication means (3/3)}}
+
+\begin{itemize}
+\item When the communication is positive:
+\begin{itemize}
+\item There is a larger incidence of vocalics and kinetics
+\item When the communication is negative people think that time is wasted 
+\end{itemize}
+\item Chronemics play a major role in meetings:
+\begin{itemize}
+\item When the communication is negative they are remarkably noted 
+\item When the communication is positive people feel them implicitly (coded in comments)
+\end{itemize}
+
+\end{itemize}
+
+\begin{center}
+    \tiny{Source: Paolo Ciancarini, Mirko Farina, Sergey Masyagin, Giancarlo Succi, Sofiia Yermolaieva, and Nadezhda Zagvozkina. ``Non verbal communication in software engineering - an empirical study.'' IEEE Access, 9:71942–71953, 2021}
+\end{center}
+
+\end{frame}
+
 
 
 
