--- a/P2023.AIBCCSS.L06.CognitiveModelsInSoftwareDevelopment.DistributedCognition.tex
+++ b/P2023.AIBCCSS.L06.CognitiveModelsInSoftwareDevelopment.DistributedCognition.tex
@@ -23,6 +23,7 @@
   \usepackage{tikz}
   \usetikzlibrary{plotmarks}
   \usepackage{pgfplots}
+  \usepackage{booktabs}
  %\usepackage{enumitem}
 %\usepackage{enumerate}
   %\usepackage[shortlabels]{enumitem}
@@ -158,6 +159,8 @@ Lezione 6: Distributed Cognition, Extended Mind, and Systemic Thinking} % The sh
 {\centerline{Structure of the lecture}}
 \begin{itemize}
     \item Extended Mind
+    \item Communication Patterns
+    \item Systemic Thinking
     \item Distributed Cognition
     \item Systemic Thinking
     \end{itemize}
@@ -467,21 +470,15 @@ Reference: Robert MacDougall, ``The Significance of the Human Hand in the Evolut
 \begin{center}
 \centering
 \begin{tabular}{|c|c|c|c|}
-\hline
-{\textbf{What is being used}} & {\textbf{by me}} & \textbf{by others} & \textbf{by any}\\
-\hline
-{Vocalics} & 16\% & 16\% & 26\% \\
-\hline
-{Kinesics} & 21\% & 8\% & 24\% \\
-\hline
- {Chronemics} & 3\% & 5\% & 5\%\\
-\hline
-{Proxemics} & 0\% & 3\% & 3\%\\
-\hline
-{Oculesics} &  0\% & 0\% & 0\%\\
-\hline
-{Synchrony} & 3\% & 0\% & 3\%\\
-\hline
+\toprule
+\textbf{What is being used} & \textbf{by me} & \textbf{by others} & \textbf{by any}\\
+\midrule Vocalics & 16\% & 16\% & 26\% \\
+\midrule Kinesics & 21\% & 8\% & 24\% \\
+\midrule Chronemics & 3\% & 5\% & 5\%\\
+\midrule Proxemics & 0\% & 3\% & 3\%\\
+\midrule Oculesics &  0\% & 0\% & 0\%\\
+\midrule Synchrony & 3\% & 0\% & 3\%\\
+\bottomrule
 \end{tabular}
 \end{center}
 
@@ -502,21 +499,21 @@ Reference: Robert MacDougall, ``The Significance of the Human Hand in the Evolut
 \begin{center}
 \centering
 \begin{tabular}{|c|c|c|c|}
-\hline
+\midrule
 {\textbf{What is being used}} & {\textbf{by me}} & \textbf{by others} & \textbf{by any}\\
-\hline
+\midrule
 {Vocalics} & 5\% & 8\% & 11\% \\
-\hline
+\midrule
 {Kinesics} & 11\% & 5\% & 11\% \\
-\hline
+\midrule
 {Chronemics} & 8\% & 8\% & 16\%\\
-\hline
+\midrule
 {Proxemics} & 0\% & 3\% & 3\%\\
-\hline
+\midrule
 {Oculesics} &  0\% & 3\% & 3\%\\
-\hline
+\midrule
  {Synchrony} & 5\% & 0\% & 5\%\\
-\hline
+\midrule
 \end{tabular}
 \end{center}
 
@@ -550,6 +547,200 @@ Reference: Robert MacDougall, ``The Significance of the Human Hand in the Evolut
 
 \end{frame}
 
+\begin{frame}
+{\centerline{Systemic Thinking (1/2)}}
+
+\begin{itemize}
+\item Systemic thinking is an interdisciplinary field of research that 
+\begin{itemize}
+\item attempts to comprehend complex human (and non-human) structures
+\item by explaining their mutual interconnections from a holistic standpoint
+\end{itemize}
+\item It is an approach applied in many disciplines, including sociology, psychology, management, etc
+\item An idea inspired somehow by many Eastern philosophies
+\item There are elements also in Pythagorean theories, then going to Plato, Avicenna (Ibn Sina), $\ldots{}$
+\end{itemize}
+
+\begin{center}
+    \tiny{Source: Mirco Farina, Giancarlo Succi, Ananga Thapaliya. ``A Systemic Perspective on Software Engineering.'' Under review}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Systemic Thinking (2/2)}}
+
+\begin{itemize}
+\item Systemic thinking draws from different disciplines  (engineering, computer science,  cognitive science,  management, philosophy, psychology, biology, ...)
+\begin{itemize}
+\item  it attempts to provide a discipline-agnostic approach for dealing with complex  problems
+\item  to understand the structure and properties of a given system in terms of the relationships among its components
+\end{itemize}
+\item It was introduced in software engineering in 1971 by Weinberg (``The psychology of computer programming'') and then forgotten or declassed under the term \textit{peopleware}
+\item The agile proponents of the division between tame and wicked problems were apparently unaware of systemic thinking.
+\end{itemize}
+
+\begin{center}
+    \tiny{Source: Mirco Farina, Giancarlo Succi, Ananga Thapaliya. ``A Systemic Perspective on Software Engineering.'' Under review}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Systemic Thinking and Software Engineering}}
+\begin{itemize}
+    \item Systemic thinking in software engineering views the software development process as a complex and dynamic system composed of multiple interconnected parts.
+    \begin{itemize}
+    \item it emphasizes the interdependences of individuals, teams, and organizations, and 
+    \item how each interdepencency influences and are influenced by one another 
+    \item also identifying coherences and incoherences in representations and
+    \item (self-)contradicting thought
+    \item schismogenesis
+\end{itemize} 
+    \item Can be divided into psychological and sociological systemic thinking
+\end{itemize} 
+
+\begin{center}
+    \tiny{Source: Mirco Farina, Giancarlo Succi, Ananga Thapaliya. ``A Systemic Perspective on Software Engineering.'' Under review}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Sociological and Psychological Views}}
+
+\begin{center}
+ \includegraphics[width=12cm]{P2023.AIBCCSS.ExtendedMindDistributedCognitionSystemicThinking/SociologicalPsychologicalST.png}
+ 
+ \end{center}
+
+\begin{center}
+    \tiny{Picture from an earlier version of the paper: Mirco Farina, Giancarlo Succi, Ananga Thapaliya. ``A Systemic Perspective on Software Engineering.'' Under review}
+ \end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Example of Systemic Analysis (1/2)}}
+
+\begin{center}
+ \includegraphics[width=10cm]{P2023.AIBCCSS.ExtendedMindDistributedCognitionSystemicThinking/ExampleSystemicAnalysis.jpg}
+ 
+ \end{center}
+
+\begin{center}
+    \tiny{Picture from: Vladimir Ivanov, Manuel Mazzara, Witold Pedrycz, Alberto Sillitti, and Giancarlo Succi. ``Assessing the Process of an Eastern European Software SME Using Systemic Analysis, GQM, and Reliability Growth Models: A Case Study.'' In Proceedings of the 38th International Conference on Software Engineering Companion (ICSE 2016), pages 251–259, Austin, Texas, May 2016. ACM}
+ \end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Example of Systemic Analysis (2/2)}}
+
+\begin{center}
+ \includegraphics[width=10cm]{P2023.AIBCCSS.ExtendedMindDistributedCognitionSystemicThinking/AkBars-Systemic.jpg}
+ 
+ \end{center}
+
+\begin{center}
+    \tiny{Picture from: Merab Gogichaty, Vladimir Ivanov, Artem Kruglov, Witold Pedrycz, Aliya Samatova, Giancarlo Succi, Raphael Valeev, ``A Systemic Approach to Evaluating the Organizational Agility in Large-Scale Companies,'' in IEEE Access, vol. 11, pp. 3307-3323, 2023}
+ \end{center}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{Empirical Analysis (1/2)}}
+
+\begin{itemize}
+ \item Core question: How can the application of systemic thinking help us understand how software teams work and operate in their daily practice?
+\item Phase 1: Online questionnaire on to 50 software developers working in Russia, Nepal, and Luxembourg based on closed questions
+    \begin{itemize}
+    \item Overall result: \textcolor{red}{systemic thinking is deeply ingrained in the daily activities of software engineers}
+    \end{itemize}
+\end{itemize}
+
+
+\begin{center}
+    \tiny{Source: Mirco Farina, Giancarlo Succi, Ananga Thapaliya. ``A Systemic Perspective on Software Engineering.'' Under review}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Empirical Analysis (2/2)}}
+
+\begin{itemize}
+\item Phase 2: Refinement of Phase 1 with physical interviews with 11 expert Russian programmers and managers based on open questions
+\begin{itemize}
+    \item Overall result: \textcolor{red}{psychological and sociological systemic approaches should be considered in all software engineering practices} and 
+    \item  \textcolor{red}{an improved understanding of these systemic approaches would benefit all the roles in any team}
+    \end{itemize}
+\item overall, the most commonly stated terms have to do with communication, teamwork, and social leadership. 
+\begin{itemize}
+\item i.e, software engineering is a social phenomenon that is heavily impacted by group dynamics and individual personalities --- more on distributed cognition
+\end{itemize}
+\end{itemize}
+
+
+\begin{center}
+    \tiny{Source: Mirco Farina, Giancarlo Succi, Ananga Thapaliya. ``A Systemic Perspective on Software Engineering.'' Under review}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Systemic Thinking and Agility (1/2)}}
+
+\begin{itemize}
+\item Another empirical study
+\item Questions: 
+\begin{itemize} 
+\item Do software engineers have a high level
+of systemic thinking in general?
+\item What is the level of systemic thinking in the different processes (traditional, agile, mix agile-traditional, ad-hoc)?
+\end{itemize}
+\item Online questionnaire with 101 respondents worldwide 
+\item Using the Systemic Thinking Scale to measure the level of systemic thinking (from 0 to 80)
+\end{itemize}
+
+\begin{center}
+    \tiny{Source: Paolo Ciancarini, Mirco Farina, Giancarlo Succi, Ananga Thapaliya. ``Systemic thinking and software development processes.'' Under review}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Systemic Thinking and Agility (2/2)}}
+
+\begin{center}
+\begin{tabular}{|l|l|l|l|}
+\midrule
+\textbf{Process}             & \textbf{Average} &  \textbf{Stdev} &  \textbf{Score} \\ \midrule
+Agile       & 2.78 & 0.17    & 55.66 \\ \midrule
+Mixed  & 2.75 & 0.29    & 54.95 \\ \midrule
+Traditional   & 2.74  & 0.32   & 54.75 \\ \midrule
+Ad hoc            & 2.49 & 0.29    & 49.89 \\ \midrule
+\end{tabular}
+
+\end{center}
+\begin{itemize}
+\item In terms of significance:
+\begin{itemize}
+    \item agile and mixed have a probability of mean STS not different from ad-hoc of 1.1\%,
+    \item traditional show a probability of having its mean STS not different from ad-hoc of 7.1\%
+    \item traditional and mixed are almost indistinguishable one another in terms of STS
+\end{itemize}
+\end{itemize}
+
+\begin{center}
+    \tiny{Source: Paolo Ciancarini, Mirco Farina, Giancarlo Succi, Ananga Thapaliya. ``Systemic thinking and software development processes.'' Under review}
+\end{center}
+
+\end{frame}
+
+
+ 
 
 
 
