--- a/P2023.AIBCCSS.L06.CognitiveModelsInSoftwareDevelopment.DistributedCognition.tex
+++ b/P2023.AIBCCSS.L06.CognitiveModelsInSoftwareDevelopment.DistributedCognition.tex
@@ -650,7 +650,7 @@ Reference: Robert MacDougall, ``The Significance of the Human Hand in the Evolut
 
 
 \begin{frame}
-{\centerline{Empirical Analysis (1/2)}}
+{\centerline{Empirical Study (1/2)}}
 
 \begin{itemize}
  \item Core question: How can the application of systemic thinking help us understand how software teams work and operate in their daily practice?
@@ -668,7 +668,7 @@ Reference: Robert MacDougall, ``The Significance of the Human Hand in the Evolut
 \end{frame}
 
 \begin{frame}
-{\centerline{Empirical Analysis (2/2)}}
+{\centerline{Empirical Study (2/2)}}
 
 \begin{itemize}
 \item Phase 2: Refinement of Phase 1 with physical interviews with 11 expert Russian programmers and managers based on open questions
@@ -728,8 +728,8 @@ Ad hoc            & 2.49 & 0.29    & 49.89 \\ \midrule
 \item In terms of significance:
 \begin{itemize}
     \item agile and mixed have a probability of mean STS not different from ad-hoc of 1.1\%,
-    \item traditional show a probability of having its mean STS not different from ad-hoc of 7.1\%
-    \item traditional and mixed are almost indistinguishable one another in terms of STS
+    \item traditional of 7.1\%
+    \item traditional and mixed are almost indistinguishable in terms of STS
 \end{itemize}
 \end{itemize}
 
@@ -741,7 +741,134 @@ Ad hoc            & 2.49 & 0.29    & 49.89 \\ \midrule
 
 
  
+\begin{frame}
+{\centerline{Toward Distributed Cognition}}
 
+\begin{itemize}
+\item We have seen that:
+\begin{itemize}
+    \item cognitive processes may extend to tools we are interacting with
+\end{itemize}
+\item However
+\begin{itemize}
+    \item cognitive processes may also \textcolor{red}{span through multiple individuals}
+    \item cognitive processes may also \textcolor{cyan}{cross time boundaries}
+\end{itemize}
+\end{itemize}
+
+\begin{center}
+    \tiny{Source: James Hollan, Edwin Hutchins, and David Kirsh. 2000. ``Distributed cognition: toward a new foundation for human-computer interaction research.'' ACM Trans. Comput.-Hum. Interact. 7, 2 (June 2000), 174–196}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Cognitive Architectures}}
+
+\begin{itemize}
+\item We have seen that:
+\begin{itemize}
+    \item cognitive processes define paths for the information to flow
+    \item during these path the information is transmitted and/or transformed
+    \item this network defines the \textcolor{red}{cognitive architecture}  
+\end{itemize}
+\item Now:
+\begin{itemize}
+    \item social organizations structure how the information flow in a group of people and devices 
+    \item therefore \textcolor{cyan}{\bf social organizations can be considered cognitive architectures themselves}
+\end{itemize}
+\end{itemize}
+
+\begin{center}
+    \tiny{Source: James Hollan, Edwin Hutchins, and David Kirsh. 2000. ``Distributed cognition: toward a new foundation for human-computer interaction research.'' ACM Trans. Comput.-Hum. Interact. 7, 2 (June 2000), 174–196}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Distributed Cognition}}
+
+\begin{itemize}
+\item Given that social organizations can be considered cognitive architectures
+\begin{itemize}
+    \item we can use the dynamics of social groups to explain what passes to the minds \textcolor{red}{(of people?)} 
+    \item and here we are understanding what phenomenologically we appreciated with systemic analysis
+ \end{itemize}
+    \item we can conclude that also \textcolor{cyan}{the cognitive process of an individual is distributed}  
+\end{itemize}
+
+\begin{center}
+    \tiny{Source: James Hollan, Edwin Hutchins, and David Kirsh. 2000. ``Distributed cognition: toward a new foundation for human-computer interaction research.'' ACM Trans. Comput.-Hum. Interact. 7, 2 (June 2000), 174–196}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Three fundamental questions}}
+
+\begin{enumerate}
+\item How groups of people implement cognitive processes that we usually consider belonging to an individual mind?\newline
+    \item What are the differences of the cognitive process of a group as a whole from the cognitive process of the people in the group?\newline
+    \item How is an individual cognitive processed affected by participating in a group cognitive process?\newline
+\end{enumerate}
+
+\begin{center}
+    \tiny{Source: James Hollan, Edwin Hutchins, and David Kirsh. 2000. ``Distributed cognition: toward a new foundation for human-computer interaction research.'' ACM Trans. Comput.-Hum. Interact. 7, 2 (June 2000), 174–196}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{The role of culture}}
+
+\begin{enumerate}
+\item How groups of people implement cognitive processes that we usually consider belonging to an individual mind?\newline
+    \item What are the differences of the cognitive process of a group as a whole from the cognitive process of the people in the group?\newline
+    \item How is an individual cognitive processed affected by participating in a group cognitive process?\newline
+\end{enumerate}
+
+\begin{center}
+    \tiny{Source: James Hollan, Edwin Hutchins, and David Kirsh. 2000. ``Distributed cognition: toward a new foundation for human-computer interaction research.'' ACM Trans. Comput.-Hum. Interact. 7, 2 (June 2000), 174–196}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Cognitive Ethnography}}
+
+\begin{itemize}
+\item If the structure of the society defines the cognitive architecture
+\begin{itemize}
+\item then \textcolor{red}{understanding the underlying culture has a pivotal role in determining the cognitive process}
+\end{itemize}
+\item the culture defines the cognitive process of the societies and the people living in it
+\item and inside the culture there are the specific environments with typical learning processes, problem solving approaches, reasoning mechanisms
+\item Therefore cognition crosses the boundaries of time
+\begin{itemize}
+\item to understand cognition we need \textcolor{cyan}{\textbf{cognitive ethnography}}
+\end{itemize}
+\end{itemize}
+
+
+\begin{center}
+    \tiny{Source: James Hollan, Edwin Hutchins, and David Kirsh. 2000. ``Distributed cognition: toward a new foundation for human-computer interaction research.'' ACM Trans. Comput.-Hum. Interact. 7, 2 (June 2000), 174–196}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Understanding a cognitive architecture}}
+
+\begin{center}
+ \includegraphics[width=10cm]{P2023.AIBCCSS.ExtendedMindDistributedCognitionSystemicThinking/networkDistributedCognition.jpg}
+ 
+ \end{center}
+
+\begin{center}
+ \tiny{Picture taken from James Hollan, Edwin Hutchins, and David Kirsh. 2000. ``Distributed cognition: toward a new foundation for human-computer interaction research.'' ACM Trans. Comput.-Hum. Interact. 7, 2 (June 2000), pag. 181}
+ \end{center}
+
+\end{frame}
 
 
 \begin{frame}
