Completion of Lecture 6

--- a/P2023.AIBCCSS.L06.CognitiveModelsInSoftwareDevelopment.DistributedCognition.tex
+++ b/P2023.AIBCCSS.L06.CognitiveModelsInSoftwareDevelopment.DistributedCognition.tex
@@ -728,8 +728,8 @@ Ad hoc            & 2.49 & 0.29    & 49.89 \\ \midrule
 \item In terms of significance:
 \begin{itemize}
     \item agile and mixed have a probability of mean STS not different from ad-hoc of 1.1\%,
-    \item traditional of 7.1\%
-    \item traditional and mixed are almost indistinguishable in terms of STS
+    \item traditional not different from ad-hoc of 7.1\%
+    \item traditional and mixed are almost indistinguishable one another in terms of STS
 \end{itemize}
 \end{itemize}
 
@@ -857,7 +857,50 @@ Ad hoc            & 2.49 & 0.29    & 49.89 \\ \midrule
 \end{frame}
 
 \begin{frame}
-{\centerline{Understanding a cognitive architecture}}
+{\centerline{The role of the cognitive architecture}}
+
+\begin{itemize}
+\item The cognitive architecture is the root of the mind of the organization:
+\begin{itemize}
+\item it is composed by people and tools
+\item it is what differentiate different development processes
+\end{itemize}
+\item failing to implement a development process often means failing to shape the cognitive architecture in the desired way and, consequently
+\begin{itemize}
+\item \textcolor{cyan}{understanding the cognitive architecture is the most effective way to enact effective development processes}
+\end{itemize}
+\item when agile methods refer to \textcolor{red}{emerging structure} of an organization the refer (often unknowingly) to making evident underlying cognitive architecture
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}
+{\centerline{Ethnography means $\ldots{}$}}
+
+\begin{itemize}
+\item Experimentation is not just formal experiments
+\item Ethnography: understanding \textcolor{red}{being inside}; it depends on
+\begin{itemize}
+\item the ability of the scientist to \textcolor{cyan}{immerge into the reality} and \textcolor{orange}{feel the experience} but still provide a
+\item  \textcolor{blue}{reliable account} of it understanding the own subjectivity
+\end{itemize}
+\end{itemize}
+
+
+\begin{center}
+ \includegraphics[width=6cm]{P2023.AIBCCSS.ExtendedMindDistributedCognitionSystemicThinking/The_Sirens_and_Ulysses_by_William_Etty.jpg}
+ 
+ \end{center}
+
+\begin{center}
+    \tiny{The drawing is ``The Sirens and Ulysses'' by William Etty (1837) taken from \url{https://en.wikipedia.org/wiki/File:The_Sirens_and_Ulysses_by_William_Etty,_1837.jpg}}
+ \end{center}
+
+\end{frame}
+
+
+\begin{frame}
+{\centerline{Understanding the cognitive architecture}}
 
 \begin{center}
  \includegraphics[width=10cm]{P2023.AIBCCSS.ExtendedMindDistributedCognitionSystemicThinking/networkDistributedCognition.jpg}
@@ -869,6 +912,27 @@ Ad hoc            & 2.49 & 0.29    & 49.89 \\ \midrule
  \end{center}
 
 \end{frame}
+
+
+\begin{frame}
+{\centerline{Evidences of Distributed Cognition}}
+
+\begin{itemize}
+\item And of cognitive architectures:
+\begin{itemize}
+\item The crew in a ship creating together a unique ``computational'' entity
+\item The pilots in a plane working together and with tools
+\item A group of fishermen also on different ships
+\end{itemize}
+\item There are also multiple communication mechanisms
+\item This has also a strong impact on how to design HCI in computers
+\end{itemize}
+\begin{center}
+    \tiny{Source: James Hollan, Edwin Hutchins, and David Kirsh. 2000. ``Distributed cognition: toward a new foundation for human-computer interaction research.'' ACM Trans. Comput.-Hum. Interact. 7, 2 (June 2000), 174–196}
+\end{center}
+
+\end{frame}
+
 
 
 \begin{frame}
