--- a/P2023.AIBCCSS.L07.CognitiveModelsInSoftwareDevelopment.DrawingAsCognitiveExperience.tex
+++ b/P2023.AIBCCSS.L07.CognitiveModelsInSoftwareDevelopment.DrawingAsCognitiveExperience.tex
@@ -445,7 +445,7 @@ Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthot
 \end{frame}
 
 \begin{frame}
-{\centerline{Time evolution of a code repository}}
+{\centerline{Modeling the time evolution of a code repository}}
 
 \begin{center}
  \includegraphics[width=8cm]{P2023.AIBCCSS.Drawing/Lagrein.jpg}
@@ -466,11 +466,9 @@ Source of the picture: Andrejs Jermakovics, Raimund Moser, Alberto Sillitti, and
  \end{itemize} 
 
 \begin{center}
- \includegraphics[width=8cm]{P2023.AIBCCSS.Drawing/aphasien.jpg}
+ \includegraphics[width=10cm]{P2023.AIBCCSS.Drawing/aphasien.jpg}
  
  \end{center}
-
-
 
 \begin{center}
 \tiny
@@ -478,17 +476,63 @@ Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthot
 \end{center}
 \end{frame}
 
+
 \begin{frame}
-{\centerline{Decoding the drawing (2/3)}}
+{\centerline{Decoding the drawing (3/3)}}
  
+\begin{center}
+ \includegraphics[width=10cm]{P2023.AIBCCSS.Drawing/flowInsideMemory.jpg}
+ 
+ \end{center}
 \begin{itemize}
-   \item Drawing also evidences what is missing
-   \item Indeed, also drawing has limitations, Freud defines it a ``Hilfsapparat"
+   \item This is how Freud represented the flow of information
+\begin{itemize}
+   \item W are the neurons connected to perception
+   \item Wz are the symbols of how such perception is taken
+   \item Ub is the subconscious, as memory traces that are unaccessible to the conscious mind
+   \item Vb is the rewriting related to words
+ \end{itemize} 
+   \item In essence, the physical life is a process
  \end{itemize} 
 
 \begin{center}
 \tiny
-Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022.
+Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, the pictures comes from page 23 and it is allegedly taken from Sigmund Freud, Briefe and Wilhelm Flie$\beta$. 1887-1904, S. Fischer, Frankfurt a.M., 1994
+\end{center}
+\end{frame}
+
+\begin{frame}
+{\centerline{Reflecting on the drawings}}
+\begin{itemize}
+   \item Drawing also evidences what is missing
+   \item Indeed, drawing has limitations, Freud defines it a ``Hilfsapparat"
+   \begin{itemize}
+   \item but still it is essential
+   \end{itemize} 
+   \item It helps also as evidencing the time-variant nature of the mind as a collection of differences 
+      \begin{itemize}
+   \item and any representation is in itself a very limited perspective
+   \item as it is well evidences considering the structure of a software repository
+   \end{itemize} 
+ \end{itemize} 
+
+\begin{center}
+\tiny
+Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022
+\end{center}
+\end{frame}
+
+\begin{frame}
+{\centerline{Sample time evolution of a code repository}}
+
+\begin{center}
+ \includegraphics[width=12cm]{P2023.AIBCCSS.Drawing/issuesArrivals.jpg}
+ 
+ \end{center}
+
+\begin{center}
+\tiny
+Source of the picture: Vladimir Ivanov, Alexey Reznik, and Giancarlo Succi. ``Comparing the reliability of software systems: A case study on mobile operating systems.'' Information Sciences. Elsevier,  2018, 423:398-411, fig. 1, page 405.
 \end{center}
 \end{frame}
 
