--- a/P2023.AIBCCSS.L07.CognitiveModelsInSoftwareDevelopment.DrawingAsCognitiveExperience.tex
+++ b/P2023.AIBCCSS.L07.CognitiveModelsInSoftwareDevelopment.DrawingAsCognitiveExperience.tex
@@ -181,10 +181,32 @@ Lezione 7: Drawing as a Cognitive Experience (for SW Development)} % The short t
 \item And likewise do the people around us
 \end{itemize} 
 \item We now therefore turn our attention to understanding the role of drawing in developing software
-\item We will use one of the many approaches, focusing on the work of Freud, through the analysis of Gianluca Solla in the book ``Disegnare, la formula di Freud,'' published by Orthotes in 2022
 \end{itemize} 
 
 \end{frame}
+
+\begin{frame}
+{\centerline{The approach of this lecture}}
+ 
+\begin{itemize}
+\item We will use one of the several existing approaches, focusing on the work of Freud, through the analysis of Gianluca Solla in the book ``Disegnare, la formula di Freud,'' published by Orthotes in 2022
+\item We will consider Freud both as:
+\begin{itemize}
+\item a researcher, explaining the meaning of drawing
+\item a (very primitive) artist, that expresses his feelings in drawing
+\end{itemize} 
+\item In this way, we will attempt to grasp a bit of the intrinsic meaning of drawing:
+\begin{itemize}
+\item why it is so relevant to software engineering
+\begin{itemize}
+\item and so why Freud is a software engineer and we are psychoanalysts ...
+\end{itemize} 
+\item the way it is ontologically a wicked problem
+\end{itemize} 
+\end{itemize} 
+
+\end{frame}
+
 
 
 \begin{frame}
@@ -497,7 +519,7 @@ Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthot
 
 \begin{center}
 \tiny
-Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, the pictures comes from page 23 and it is allegedly taken from Sigmund Freud, Briefe and Wilhelm Flie$\beta$. 1887-1904, S. Fischer, Frankfurt a.M., 1994
+Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, the pictures comes from page 23 and it is allegedly taken from Sigmund Freud, Briefe and Wilhelm Flie\ss. 1887-1904, S. Fischer, Frankfurt a.M., 1994
 \end{center}
 \end{frame}
 
@@ -535,6 +557,95 @@ Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthot
 Source of the picture: Vladimir Ivanov, Alexey Reznik, and Giancarlo Succi. ``Comparing the reliability of software systems: A case study on mobile operating systems.'' Information Sciences. Elsevier,  2018, 423:398-411, fig. 1, page 405.
 \end{center}
 \end{frame}
+
+\begin{frame}
+{\centerline{Moving on}}
+\begin{itemize}
+   \item Nature of wicked problems:
+      \begin{itemize}
+   \item Freud: ``We should be almost ashamed that after so much work we find always new difficulties in understanding the fundamental facts that are in front of us"
+   \end{itemize} 
+   \item It is always in a unstable balance between invention and repetition
+   \item Every end is always like a new beginning
+   \item This is why Freud represent his medical experiences, the ``Clinical Cases'' as a storyteller
+    \begin{itemize}
+   \item We will discuss more about storytelling later on
+   \end{itemize} 
+  \item We will now have a review of a few drawings of Freud as per the reference book, to see how their interpretation can help explaining how to interpret drawings in software development
+ \end{itemize} 
+
+\begin{center}
+\tiny
+Source of the content: Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, the citation of Freud is allegedly from Sigmund Freud ``Hemmung, Symptom und Angst,'' 1926.
+\end{center}
+\end{frame}
+
+
+\begin{frame}
+{\centerline{Drawings in Trieste (1/2)}}
+
+\begin{itemize}
+   \item Drawing to select elements for further analysis
+ \end{itemize} 
+
+
+\begin{center}
+ \includegraphics[width=6cm]{P2023.AIBCCSS.Drawing/selectingElementsFreud.jpg}
+ 
+ \end{center}
+
+\begin{center}
+\tiny
+Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 39
+\end{center}
+\end{frame}
+
+\begin{frame}
+{\centerline{Drawings in Trieste (2/2)}}
+
+\begin{itemize}
+   \item Drawing to describe the own experience in terms of the perception of the outer world
+ \end{itemize} 
+
+
+\begin{center}
+ \includegraphics[width=5.5cm]{P2023.AIBCCSS.Drawing/outerWorld.jpg}
+ 
+ \end{center}
+
+\begin{itemize}
+   \item Here we perceive how the drawing defines a wicked problem, where a solution is the beginning of a new investigation.
+ \end{itemize} 
+
+\begin{center}
+\tiny
+Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 38
+\end{center}
+\end{frame}
+
+\begin{frame}
+{\centerline{Drawing in a letter to Wilhelm}}
+
+\begin{itemize}
+   \item Drawing to describe a model that has been devised
+ \end{itemize} 
+
+
+\begin{center}
+ \includegraphics[width=3.5cm]{P2023.AIBCCSS.Drawing/schematizzazione.jpg}
+ 
+ \end{center}
+
+\begin{itemize}
+   \item We notice here a completely different approach to draw, where there is quite a statement of correctness
+ \end{itemize} 
+
+\begin{center}
+\tiny
+Gianluca Solla ``Disegnare, la formula di Freud,'' Orthotes, 2022, pag. 45, with the picture from Sigmund Freud, ``Aus den Anf\"{a}ngen der Psychoanalyse : Briefe an Wilhelm Fliess, Abhandlungen und Notizen aus den Jahren 1887-1902,'' London : Imago Pub. Co, 1950, pag. 114
+\end{center}
+\end{frame}
+
 
 
 \begin{frame}
